...
  onTitleChange,
  onBehaviorQueryChange,
  onStarsChange,
  onBehaviorSelect,
  onAdd,
  onCancel,
  submitLabel = 'Add',
  showTitleInput = true,
  showStarPicker = true,
  showCancelButton = true,
  showAllBehaviorsWhenSearchEmpty = false,
  emptyBehaviorMessage,
  showSubmitButton = true,
...
