appId: com.dleanjeans.recupero
---
- runFlow: 00-launch-app.yaml

# Create a new behavior
- tapOn: + Add behavior
- inputText: Drink water
- tapOn: Add

- tapOn: Log Drink water
- tapOn: Log
- tapOn: Drink water

- tapOn: Edit Metadata